# datatripper

./: .gitignore  AGENTS.md  CNAME  README.md  _config.yml  author-research-queue.md  authors.yaml  claude.html  exa-search-request.md  ghostty.html  index.html  ingest.py  intake-queue.md  kb-data-engineering.html  kb-knowledge-engineering-final.html  kb-knowledge-engineering-resource-card.html  kb-knowledge-engineering.html  kb-semantic-layers.html  kb-semantic.html  knowledge.html  lazygit.html  nvim.html  opencode.html  pyproject.toml  resources.yaml  styles.css  tmux.html  tui.js
.beads/: beads.base.jsonl  beads.base.meta.json  beads.left.jsonl  beads.left.meta.json  issues.jsonl
.claude/: settings.local.json
archive/: index-card-catalog-tui.html  index-card-catalog.html  index-complete.html  index-lipgloss-test.html  index-tui1.backup.html  kb-knowledge-engineering-card-catalog-tui.html  kb-knowledge-engineering-card-catalog.html  kb-knowledge-engineering-resource-card.html  kb-knowledge-engineering-styled.html  kb-knowledge-engineering-tui2.html  kb-knowledge-engineering-v2.html  kb-knowledge-engineering.html  kb-semantic-layers.html  pixel-art.html  resource-graph.html
bird/: __init__.py  cli.py  poll-bookmarks.sh  poller.py  router.py  triage.py
branding/: library-wheel-ascii.html
config/: ingestion.yaml
docs/: bird-integration.md  ingestion-pipeline-design.md  ingestion-pipeline-update.md  kb-styling-standardization-plan.md
info_references/: Instapaper-Export-2025-12-15_00_17_05.csv  substack-bookmarks-categorized.md  tableau.md
pages/: tui.js  (+5 more)
(+39 files in other folders)
